Fix small issues on small screens

--- a/css/main.css
+++ b/css/main.css
@@ -10,7 +10,7 @@ html {
   -webkit-text-size-adjust: 100%;
   text-size-adjust: 100%;
   box-sizing: border-box;
-  font-family: 'IBM Plex Sans', sans-serif;
+  font-family: 'Bitter', serif;
 }
 
 *, *::before, *::after {
@@ -63,7 +63,6 @@ nav {
 }
 
 .nav li {
-  padding-right: 2rem;
   list-style-type: none;
   text-align: right;
 }
@@ -93,10 +92,30 @@ header {
 .location-pic img {
   width: 100%;
 }
+.information {
+  display: flex;
+  justify-content: flex-start;
+}
 
 .info-address, .info-hours {
   display: inline-block;
   width: 49%;
+}
+
+.info-address h3, .info-hours h3 {
+  display: block;
+}
+
+.address li {
+  list-style-type: none;
+}
+
+.address {
+  padding: 0;
+}
+
+.hours dd{
+  margin-left: 1rem;
 }
 
 /* MENU */
@@ -127,8 +146,20 @@ header {
   margin: 1rem;
 }
 
+.review-1, .review-2 {
+  margin-bottom: 2rem;
+}
+
 .review-1 img, .review-2 img {
   width: 100%;
+}
+
+.reviews p {
+  margin-top: 0;
+}
+
+.reviews h3 {
+  margin: 0;
 }
 
 /* FOOTER */
@@ -138,18 +169,30 @@ footer {
   background-color: #d8d8d8;
 }
 
+#contact h3 {
+  margin-bottom: 0;
+  margin-top: .5rem;
+}
+
+#contact p {
+  margin-top: 0;
+}
+
 .social {
   padding: 0;
 }
 
 .social li {
+  width: 33%;
   list-style-type: none;
+  text-align: center;
 }
 
 .social {
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
 }
+
 .social img {
   width: 66%;
 }
